--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,3 +17,12 @@ checks:
         fix_identation_4spaces: true
         fix_doc_comments: true
 
+build:
+    nodes:
+        coverage:
+            tests:
+                override:
+                    - command: ./run-my-tests
+                      coverage:
+                          file: build/logs/clover.xml
+                          format: clover
