--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "illuminate/support": "^6.0|^7.0"
+        "php": "^7.3",
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0|^5.0",
