--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^9.5.10"
+        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/phpunit": "^9.5.10|^10.5"
     },
     "autoload": {
         "psr-4": {
